--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,11 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-crypto</artifactId>
         </dependency>
+        <dependency>
+        	<groupId>com.ispan</groupId>
+        	<artifactId>springboot3demo</artifactId>
+        	<version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
