--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,12 @@
         <java.version>17</java.version>
     </properties>
     <dependencies>
+		<dependency>  
+  <groupId>javax.servlet</groupId>
+  <artifactId>servlet-api</artifactId>
+  <version>2.4</version>
+  <scope>provided</scope>
+</dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -65,6 +71,11 @@
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-crypto</artifactId>
+        </dependency>
+        <dependency>
+        	<groupId>RestFulWebProject</groupId>
+        	<artifactId>RestFulWebProject</artifactId>
+        	<version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
