--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,12 @@
   <version>2.4</version>
   <scope>provided</scope>
 </dependency>
+    <dependency>
+        <groupId>javax</groupId>
+        <artifactId>javaee-api</artifactId>
+        <version>8.0</version>
+        <scope>provided</scope>
+    </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -84,6 +90,11 @@
     <artifactId>modelmapper</artifactId>
     <version>2.3.5</version>
 </dependency>
+    	<dependency>
+    		<groupId>HibernateProject</groupId>
+    		<artifactId>HibernateProject</artifactId>
+    		<version>0.0.1-SNAPSHOT</version>
+    	</dependency>
     </dependencies>
 
     <build>
