--- a/pom.xml
+++ b/pom.xml
@@ -105,8 +105,10 @@
             <artifactId>jjwt</artifactId>
             <version>0.12.0</version>
         </dependency>
-        
-        
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
