--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,13 +9,20 @@ spring.datasource.password=1234
 
 ### JPA config
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+
+spring.jpa.show-sql: true
+spring.jpa.properties.hibernate.format_sql: true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=TRACE
 #spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.open-in-view=false
 #### open put, delete request ###
 spring.mvc.hiddenmethod.filter.enabled=true
+
+
+
+
 
 #server.servlet.encoding.charset=UTF-8
 #server.servlet.encoding.force=true
