--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,14 @@ spring.mvc.hiddenmethod.filter.enabled=true
 
 #spring.servlet.multipart.max-file-size=10MB
 #spring.servlet.multipart.max-request-size=100MB
+
+spring.freemarker.cache=true
+spring.freemarker.template-loader-path=classpath:/templates/
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=ezan0718@gmail.com
+spring.mail.password=amrp cgmr jvks cwww
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.debug=true
