--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+\u5F8C\u7AEF application.properties \u4FEE\u6539
 server.port=8080
 #server.servlet.context-path=/my-app
 
@@ -35,4 +36,9 @@ spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.debug=true
 
 cors.allowed.origins=http://localhost:5173
+spring.mvc.cors.allowed-origins=http://localhost:5173
 
+server.servlet.session.timeout=30m
+server.servlet.session.cookie.http-only=true
+# \u5982\u679C\u4F60\u4F7F\u7528HTTPS\uFF0C\u5247\u8A2D\u7F6E\u70BAtrue
+server.servlet.session.cookie.secure=false
