--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,4 +35,11 @@ spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.debug=true
 
 cors.allowed.origins=http://localhost:5173
+spring.mvc.cors.allowed-origins=http://localhost:5173
+
+server.servlet.session.timeout=30m
+server.servlet.session.cookie.http-only=true
+#if you ues HTTPS,setting true
+server.servlet.session.cookie.secure=false
+
 
