--- a/pom.xml
+++ b/pom.xml
@@ -101,25 +101,15 @@
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
         </dependency>
-<dependency>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-web</artifactId>
-</dependency>
-<dependency>
-    <groupId>org.springframework</groupId>
-    <artifactId>spring-core</artifactId>
-    <version>5.3.15</version> <!-- 请根据你的 Spring 版本修改版本号 -->
-</dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-security</artifactId>-->
-<!--            <version>3.1.5</version>-->
-<!--        </dependency>-->
-
-
-
-
-
+        <!-- 移除了额外的spring-boot-starter-web依赖项 -->
+        <!-- 移除了指定版本的spring-core依赖项 -->
+        <!-- 如果需要spring-boot-starter-security，可以像下面这样添加 -->
+        <!--
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        -->
     </dependencies>
 
     <build>
@@ -138,6 +128,4 @@
             </plugin>
         </plugins>
     </build>
-
-
 </project>
