--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8080
 
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=blackbeanFinal;encrypt=true;trustServerCertificate=true
-spring.datasource.username=blackbean
+spring.datasource.username=sa
 spring.datasource.password=1234
 
 ### JPA config
