後端實裝簡訊API

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8080
 
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=blackbeanFinal;encrypt=true;trustServerCertificate=true
-spring.datasource.username=blackbean
+spring.datasource.username=sa
 spring.datasource.password=1234
 
 ### JPA config
@@ -36,3 +36,6 @@ spring.mail.properties.mail.debug=true
 
 cors.allowed.origins=http://localhost:5173
 
+sms.username=ezan0718
+sms.password=ispanproject1
+sms.api.url=http://api.twsms.com/json/sms_send.php
