--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,3 +36,8 @@ spring.mail.properties.mail.debug=true
 
 cors.allowed.origins=http://localhost:5173
 
+
+sms.username=ezan0718
+sms.password=ispanproject1
+sms.api.url=http://api.twsms.com/json/sms_send.php
+
